--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+		<groupId>com.google.collections</groupId>
+		<artifactId>google-collections</artifactId>
+		<version>1.0-rc2</version>
+	</dependency>
   </dependencies>
 </project>
